# ai-canvas-bot

./: .gitignore  README.md  main.py  pyproject.toml
src/: database.py  prompts.py
